udapte: solucion problema de mapping al gssapi

--- a/sources/gssapi/ldapserver/slapd.conf
+++ b/sources/gssapi/ldapserver/slapd.conf
@@ -28,14 +28,13 @@ sasl-host ldapserver.edt.org
 
 
 authz-policy from
+authz-regexp "^uid=([^,/]+)/alumnes,cn=edt\.org,cn=gssapi,cn=auth" "uid=$1,ou=alumnes,dc=edt,dc=org"
 authz-regexp "^uid=[^,/]+/admin,cn=edt\.org,cn=gssapi,cn=auth" "cn=Manager,dc=edt,dc=org"
-authz-regexp "^uid=[^,/]+/professors.tarda,cn=edt\.org,cn=gssapi,cn=auth" "uid=$1,o=tarda,ou=professors,dc=edt,dc=org"
-authz-regexp "^uid=[^,/]+/professors.mati,cn=edt\.org,cn=gssapi,cn=auth" "uid=$1,o=mati,ou=professors,dc=edt,dc=org"
-authz-regexp "^uid=[^,/]+/professors.caps,cn=edt\.org,cn=gssapi,cn=auth" "uid=$1,o=caps,ou=professors,dc=edt,dc=org"
-authz-regexp "^uid=[^,/]+/professors.becaris,cn=edt\.org,cn=gssapi,cn=auth" "uid=$1,o=beacaris,ou=professors,dc=edt,dc=org"
-authz-regexp "^uid=[^,/]+/alumnes,cn=edt\.org,cn=gssapi,cn=auth" "uid=$1,ou=alumnes,dc=edt,dc=org"
+authz-regexp "^uid=([^,/]+)/professors.tarda,cn=edt\.org,cn=gssapi,cn=auth" "uid=$1,o=tarda,ou=professors,dc=edt,dc=org"
+authz-regexp "^uid=([^,/]+)/professors.mati,cn=edt\.org,cn=gssapi,cn=auth" "uid=$1,o=mati,ou=professors,dc=edt,dc=org"
+authz-regexp "^uid=([^,/]+)/professors.caps,cn=edt\.org,cn=gssapi,cn=auth" "uid=$1,o=caps,ou=professors,dc=edt,dc=org"
+authz-regexp "^uid=([^,/]+)/professors.becaris,cn=edt\.org,cn=gssapi,cn=auth" "uid=$1,o=beacaris,ou=professors,dc=edt,dc=org"
 
-#authz-regexp "^uid=([^,]+),cn=edt\.org,cn=gssapi,cn=auth" "uid=$1,ou=alumnes,dc=edt,dc=org"
 
 
 TLSCACertificateFile /etc/openldap/certs/cacrt.pem
