--- a/sources/gssapi/ldapserver/slapd.conf
+++ b/sources/gssapi/ldapserver/slapd.conf
@@ -26,6 +26,7 @@ sasl-secprops noanonymous,noplain,noactive
 sasl-realm EDT.ORG
 sasl-host ldapserver.edt.org
 
+security ssf=256
 
 authz-policy from
 authz-regexp "^uid=([^,/]+)/alumnes,cn=edt\.org,cn=gssapi,cn=auth" "uid=$1,ou=alumnes,dc=edt,dc=org"
